More Mobile friendly

--- a/client/src/components/Header/Header.css
+++ b/client/src/components/Header/Header.css
@@ -1,8 +1,8 @@
-@media (max-width: 370px) {
+/* @media (max-width: 370px) {
   .header-item > li:first-child {
     display: none;
   }
-}
+} */
 
 nav {
   font-weight: bold;
